[package]
name = "v4l"
description = "Safe video4linux (v4l) bindings"
version = "0.13.1"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/libv4l-rs"

[dependencies]
bitflags = "1.2.1"
futures = { version = "0.3", optional = true }
libc = "0.2"
tokio = { version = "1", features = [ "net" ], optional = true, git = "https://csp.edag.de/bitbucket/scm/ee21i00805/sw-tokio.git", branch = "interest_prio" }
v4l-sys = { path = "v4l-sys", version = "0.2.0", optional = true }
v4l2-sys = { path = "v4l2-sys", version = "0.2.0", package="v4l2-sys-mit", optional = true }

[dev-dependencies]
glium = "0.27.0"
jpeg-decoder = "0.2.1"

[features]
default = ["v4l2"]
libv4l = ["v4l-sys"]
v4l2 = ["v4l2-sys"]
async-tokio = ["tokio", "futures"]

[workspace]
members = [
    "v4l-sys",
    "v4l2-sys",
]
